# idhm2022-pydra-demo

./: .gitignore  LICENSE  Makefile  README.md  demo.ipynb  nifd-to-bids.ipynb  pyproject.toml
