[tool.poetry]
name = "idhm2022-pydra-demo"
version = "0.0.1"
description = ""
authors = ["The Aramis Lab"]
license = "BSD-2-Clause"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
pydra = "^0.21"
pydra-dcm2niix = "^1.2.0"
pandas = "^1.4.0"
jupyter = "^1.0.0"
nest-asyncio = "^1.5.6"
pydra-nipype1 = "^0.2.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
